--- a/client/src/styled.css
+++ b/client/src/styled.css
@@ -14,9 +14,9 @@ h6 {
 body {
   font-family: "Inter", sans-serif;
 }
-
-/* body {
-  background-image: url('https://img.freepik.com/free-photo/elegant-white-background-with-blue-wave-lines_1017-32741.jpg?t=st=1743166768~exp=1743170368~hmac=04ea7fb9122e299e10c68438ed36d5fc4addded3e9e5336cf91a3455fc653332&w=1800');
+/* 
+body {
+  background-image: url('https://img.freepik.com/free-psd/gradient-wavy-border-design_23-2151320985.jpg?t=st=1743388691~exp=1743392291~hmac=cbdcd46c0b23ad56384183b8496f92fa675b50bcbd52d9f4b591c33c6b35e19a&w=1380');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -99,5 +99,14 @@ body {
   p.lead {
     font-size: 14px;
     font-weight: 300;
+  }
+  input.form-control {
+    font-size: 12px;
+  }
+  .form-select {
+    font-size: 12px;
+  }
+  .salary-range {
+    font-size: 12px !important;
   }
 }
