--- a/client/src/styled.css
+++ b/client/src/styled.css
@@ -91,22 +91,22 @@ body {
 @media (max-width: 480px) {
   /* Even smaller screens */
   body {
-    font-size: 12px;
+    font-size: 13px !important;
   }
   p {
-    font-size: 12px;
+    font-size: 13px !important;
   }
   p.lead {
-    font-size: 14px;
-    font-weight: 300;
+    font-size: 14px !important;
+    font-weight: 300 !important;
   }
   input.form-control {
-    font-size: 12px;
+    font-size: 13px !important;
   }
   .form-select {
-    font-size: 12px;
+    font-size: 13px !important;
   }
   .salary-range {
-    font-size: 12px !important;
+    font-size: 13px !important;
   }
 }
