--- a/client/src/styled.css
+++ b/client/src/styled.css
@@ -262,3 +262,6 @@ body {
   border-color: rgba(13, 110, 253, 0.2);
   color: #0d6efd !important;
 }
+
+/*********************************************************************/
+
